--- a/aboutme/src/components/Footer/styles.scss
+++ b/aboutme/src/components/Footer/styles.scss
@@ -1,6 +1,5 @@
 footer {
     position: relative;
-    margin-top: 100px;
     width: 100vw;
     height: 100px;
     background-color: $FOOTER;
