--- a/aboutme/src/components/Posts/styles.scss
+++ b/aboutme/src/components/Posts/styles.scss
@@ -37,9 +37,7 @@
     }
 
     &__container {
-
-        width: calc(100% - 20px);
-        margin: 0 auto;
+        @include margin-page;
 
         @media #{$BREAKPOINT-TABLET} {
         max-width: unset;
